@@ -50,6 +50,7 @@ Standard library:
 - expose Sys.{int_size,max_wosize} for improved js_of_ocaml portability
   (Hugo Heuzard)
 * PR#5960 Add List.cons (Daniel Bünzli).
+* Add Pervasives.flip (Jacques-Pascal Deplaix).
 * Filename: Optional ?perms argument to open_temp_file
   (Daniel Bünzli, review by Jacques-Pascal Deplaix)
 
